# python-mcp

./: README.md  pyproject.toml
.github/workflows/: release.yml
eval/: codex_expected.md  codex_prompts.md  run_local.md
src/python_mcp/: __init__.py  aws_sts.py  config.py  emailer.py  eval_cases.py  eval_runner.py  mcp_catalog.py  mcp_config.py  mcp_factories.py  mcp_registry.py  mcp_server.py  models.py
tests/: test_emailer.py  test_mcp_catalog.py  test_mcp_effectiveness.py  test_mcp_registry.py
