[project]
name = "python-mcp"
dynamic = ["version"]
description = "A small public Python library with a non-invasive Griffe-powered MCP adapter."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "griffe>=1.7",
    "mcp>=1.10",
    "pydantic>=2.7",
]

[project.scripts]
python_mcp = "python_mcp.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/python_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
